<resources>
    <string name="app_name">GalleryDemo</string>

    <string name="camera_roll">Camera Roll</string>
    <string name="message_no_folder">No folders found</string>
    <string name="message_empty_gallery">Gallery is empty</string>
    <string name="message_open_permissions_setting">Please enable permissions from the settings.</string>
    <string name="settings">Settings</string>
    <string name="cancel">Cancel</string>
    <string name="gallery_permission">Gallery Permission</string>
    <string name="message_allow_gallery_permission">This lets you share photos from your library and save photos to your Camera Roll.</string>
    <string name="allow">Allow</string>
    <string name="images_only">Images Only</string>
    <string name="videos_only">Videos Only</string>
    <string name="both">Both</string>
</resources>