<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.usman.gallerydemo.ui.gallery.GalleryViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutPermissions"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/trans_black"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="54dp"
        >

        <TextView
            android:id="@+id/tvPermissionTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="19.1dp"
            android:text="@string/gallery_permission"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/tvPermissionDetail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed" />

        <TextView
            android:id="@+id/tvPermissionDetail"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="20dp"
            android:background="@drawable/bg_white_stroke"
            android:gravity="center"
            android:paddingHorizontal="4dp"
            android:text="@string/message_allow_gallery_permission"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="13.5sp"
            app:layout_constraintBottom_toTopOf="@+id/btnAllow"
            app:layout_constraintDimensionRatio="w,1:1"
            app:layout_constraintEnd_toEndOf="@+id/btnAllow"
            app:layout_constraintStart_toStartOf="@+id/btnAllow"
            app:layout_constraintTop_toBottomOf="@+id/tvPermissionTitle" />

        <Button
            android:id="@+id/btnAllow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="19.1dp"
            android:background="@drawable/bg_theme_stroke"
            android:onClick="@{()->viewModel.onPermissionAllowClicked()}"
            android:text="@string/allow"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="15.8sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPermissionDetail" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>